--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,1 +1,8 @@
-<h3>Hello World!</h3>
+<ol class="post-list">
+    {{#each posts as |post|}}
+    <li>
+        {{!-- removed <article> and pasted into post-info --}}
+        {{> post-info post }}
+    </li>
+    {{/each}}
+</ol>
