--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,12 +16,12 @@
                 <a href="/">The Tech Blog</a>
             </h1>
             <nav>
-                {{!-- {{#if loggedIn}}
+                {{#if loggedIn}}
                 <a href="/dashboard">dashboard</a>
                 <button id="logout" class="btn-no-style">logout</button>
                 {{else}}
                 <a href="/login">login</a>
-                {{/if}} --}}
+                {{/if}}
             </nav>
         </header>
         <main>
@@ -32,9 +32,9 @@
         </footer>
     </div>
 
-    {{!-- {{#if loggedIn}}
+    {{#if loggedIn}}
     <script src="/javascript/logout.js"></script>
-    {{/if}} --}}
+    {{/if}}
 </body>
 
 </html>
